--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+altgraph==0.17.4
 certifi==2023.11.17
 charset-normalizer==3.3.2
+cx-Freeze==6.15.12
 idna==3.6
 iniconfig==2.0.0
+macholib==1.16.3
 packaging==23.2
 pluggy==1.3.0
+pyinstaller==6.3.0
+pyinstaller-hooks-contrib==2023.11
 pytest==7.4.3
 PyYAML==6.0.1
 Random-Word==1.0.11
